# financial_coach

./: .env.example  .gitignore  DESIGN_DOC.md  README.md  docker-compose.yml
app/: .dockerignore  BACKEND_KT.md  Dockerfile  README.md  TEST_COVERAGE.md  pyproject.toml
app/src/: database.py  main.py  seeder.py
app/src/agents/: graph.py  state.py  tools.py
app/src/coach/: config.py  database.py  main.py  models.py  schema.py  security.py  seeder.py
app/src/coach/agents/: graph.py  prompts.py  state.py  tools.py
app/src/coach/services/: insights.py  prompts.py
app/src/tests/: conftest.py  test_api.py  test_services.py
db/: DB_KT.md  init-read-only-user.sh
frontend/: .dockerignore  Dockerfile  FRONTEND_KT.md  README.md  components.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/ai-elements/: code-block.tsx  confirmation.tsx  terminal.tsx
frontend/src/components/chat/: ChatEmptyState.tsx  Chatbot.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/pages/: ChatPage.tsx  Dashboard.tsx
